--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "@bonadocs/core": "1.0.0-alpha.1"
   },
   "devDependencies": {
     "@types/node": "^20",
