--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bonadocs/core": "^1.0.0-alpha.3",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5",
-    "@bonadocs/core": "1.0.0-alpha.1"
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/node": "^20",
