fix: add tag options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "./src/**/*",
     ".next/types/**/*.ts",
     "build/types/**/*.ts",
-    "dist/types/**/*.ts"
+    "dist/types/**/*.ts",
+    "out/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
