--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@bonadocs/core": "^1.0.2",
-    "next": "14.0.3",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.23.0",
